--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 			<h1><span class="rtitle">Awesome</span> <span class="ltitle">Tic Tac Toe</span></h1>
 		</section>
 		<section class="score-board">
+			<input id="xName">
+			<input id="oName">
 			<p><span class="x">X</span>: <span id="xScore">0</span> points</p>
 			<p><span class="o">O</span>: <span id="oScore">0</span> points</p>
 		</section>
@@ -34,9 +36,14 @@
 		</section>
 
 		<section class="display announcer hide"></section>
-		<section class="controls">
-			<button id="reset">Reset</button>
-		</section>
+		<div class="buttonS">
+			<section class="controls">
+				<button id="reset">Reset</button>
+			</section>
+			<section class="controls">
+				<button id="clear">Clear</button>
+			</section>
+		</div>
 	</main>
 </body>
 </html>
